--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "websockets-playlist",
+  "name": "LDCA-UDG-05",
   "version": "1.0.0",
   "description": "Un chat con node.js y uso de sockets",
   "main": "index.js",
