--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Castolo-10/LDCA-UDG-05.git",
+    "url": "git+https://github.com/Castolo-10/LDCA-UDG-05.git"
   },
   "author": "Castolo-10",
   "license": "MIT",
