--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   ],
   "author": "Daniel Castolo",
   "license": "MIT",
+  "engines": {
+    "node": "8.11.4"
+  },
   "bugs": {
     "url": "https://github.com/Castolo-10/LDCA-UDG-05/issues"
   },
