--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "https://github.com/Castolo-10/LDCA-UDG-05.git",
-    "start": "node index.js",
-    "web": "npm start"
+    "web": "node index.js",
+    "build": "npm run build"
   },
   "repository": {
     "type": "git",
